--- a/制作サイト/style/style.css
+++ b/制作サイト/style/style.css
@@ -58,6 +58,21 @@ header{
 	transition: .3s;
     box-sizing: border-box;
 }
+.upside{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+.modal__left{
+    background-color: lightblue;
+}
+.modal__right{
+    background-color: wheat;
+}
+.bottomside{
+    display: flex;
+    justify-content: center;
+}
 /*モーダル本体の擬似要素の指定*/
 .modal-container:before{
 	content: "";
@@ -110,6 +125,58 @@ header{
     text-align: center;
     margin: 0 10px 0 10px;
 }
+
+/* 学習日カレンダー */
+
+
+/* labelタグ */
+.date-edit {
+  position: relative;
+}
+
+/* ボタン部分 */
+.date-edit::before {
+    background: no-repeat center center / cover #ededf0;
+    border: solid 5px #ededf0;
+    content: "";
+    position: absolute;
+    top: -8px;
+    /* right: -53px; */
+    border-radius: 11px;
+    height: 37px;
+    width: 137px;
+    opacity: 0.5;
+}
+
+/* ボックス部分 */
+input[type="date"] {
+  padding: 10px;
+  text-align: center;
+}
+
+
+input[type="date"]::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+  }
+  input[type="date"]::-webkit-clear-button{
+    -webkit-appearance: none;
+  }
+
+  
+input[type="date"]::-webkit-calendar-picker-indicator{
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    padding: 0;
+    background: transparent;
+    color: transparent;
+    cursor: pointer;
+    height: 50px;
+    width: 180px;
+  }
+  
 
 
 
