--- a/制作サイト/style/style.css
+++ b/制作サイト/style/style.css
@@ -129,7 +129,7 @@ header{
 /* 学習日カレンダー */
 
 
-/* labelタグ */
+/* 学習日カレンダーのlabelタグ */
 .date-edit {
   position: relative;
 }
@@ -177,6 +177,88 @@ input[type="date"]::-webkit-calendar-picker-indicator{
     width: 180px;
   }
   
+
+    /* 学習言語リスト */
+    .check__btn__list__box{
+        display: flex;
+    }
+    .ECM_CheckboxInput {
+        padding: 12px 8px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        border-radius: 26px;
+        width: auto;
+        height: auto;
+        
+        }
+        .ECM_CheckboxInput-Input {
+        margin: 0;
+        width: 0;
+        opacity: 0;
+        }
+        .ECM_CheckboxInput:hover{
+        background: rgba(0,0,0,.05) !important;
+        }
+        .ECM_CheckboxInput:hover > .ECM_CheckboxInput-DummyInput{
+        transform: scale(1.1);
+        }
+        .ECM_CheckboxInput-Input:focus + .ECM_CheckboxInput-DummyInput{
+        transform: scale(1.1);
+        }
+        .ECM_CheckboxInput-Input:checked + .ECM_CheckboxInput-DummyInput {
+        background: #0f71bc;
+        }
+        .ECM_CheckboxInput-Input:checked + .ECM_CheckboxInput-DummyInput::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 35%;
+        height: 4px;
+        border-radius: 2px;
+        transform: translate(-6px, 5px) rotateZ(-135deg);
+        transform-origin: 2px 2px;
+        background: #FFFFFF;
+        }
+        .ECM_CheckboxInput-Input:checked + .ECM_CheckboxInput-DummyInput::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 70%;
+        height: 4px;
+        border-radius: 2px;
+        transform: translate(-6px, 5px) rotateZ(-45deg);
+        transform-origin: 2px 2px;
+        background: #FFFFFF;
+        }
+        .ECM_CheckboxInput-DummyInput {
+        position: relative;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 32px;
+        height: 32px;
+        border: solid 2px transparent;
+        background: rgba(0, 0, 0, .15);
+        border-radius: 50%;
+        transition: all .15s linear;
+        }
+        .ECM_CheckboxInput-LabelText {
+        margin-left: 12px;
+        display: block;
+        font-size: 18px;
+        }
+
+/* モーダルの右側 */
+/* Twitter用のコメント */
+.comment__form{
+    background-color: #ededf0;
+    width: fit-content;
+}
 
 
 
