--- a/制作サイト/style/style.css
+++ b/制作サイト/style/style.css
@@ -25,9 +25,15 @@ main{
 
 /* ヘッダー----------------------------------------------------------------------- */
 header{
-    background-color: lightgreen;
+    background-color: white;
     height: 60px;
     line-height: 60px;
+}
+
+.header__logo{
+    position: relative;
+    bottom: 16px;
+    left: 15px;
 }
 .site-header__wrapper {
     display: contents;
@@ -40,8 +46,14 @@ header{
 }
 
 .header__btn{
-    background-image: linear-gradient(90deg, rgba(65, 164, 253, 1), rgba(14, 244, 255, 1));
+    background-image: linear-gradient(90deg, rgb(65, 164, 253), rgb(14, 244, 255));
     border-radius: 21px;
+    width: 103px;
+    height: 43px;
+    /* bottom: -10px; */
+    top: 10px;
+    position: relative;
+    color: white;
 }
 /* モーダル-------------------------------------------------------------------------- */
 /*モーダルを開くボタン*/
@@ -334,6 +346,9 @@ input[type="date"]::-webkit-calendar-picker-indicator{
   }
 
 
+
+
+
 /* 学習時間３項目 */
 .study__hour{
     display: flex;
@@ -377,7 +392,7 @@ input[type="date"]::-webkit-calendar-picker-indicator{
     gap: 20px;
 }
 .contents__box{
-    background-color: aqua;
+    background-color: white;
     border-radius: 21px;
 }
 
